--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,6 @@
     margin-left: 120px;
     margin-right: 120px;
     min-height: 20vh;
-    background-color: #006cfa;
-    border: 1px solid white;
+    background-color: rgb(241, 182, 192);
+    border: 1px solid black;
 }
