--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 
-.box{
+[class*="col-"] {
+    position: relative;
+}
 
+.box{
     min-height: 20vh;
     background-color: rgb(241, 182, 192);
     border: 1px solid black;
+    text-align: center;
+    position: absolute;
 }
